# wikicitations-api

./: README.md  app.py  config.py  config_example.py  pyproject.toml  requirements.txt
models/: add_job_schema.py  add_job_to_queue.py  enums.py  job.py  lookup_by_wikidata_qid.py  lookup_wikicitations_qid.py  send_job_to_article_queue.py  send_job_to_celery.py  send_job_to_rabbitmq.py  wikibase.py  wikicitations_wikibase.py  work_queue.py
tests/: test_lookup_wikicitations_qid.py  test_send_job_to_article_queue.py  test_send_job_to_celery.py  test_send_job_to_rabbitmq.py  test_wikicitations_wikibase.py  test_work_queue.py
